[package]
name = "bf-rs"
version = "0.1.0"
description = "Brainfuck interpreter in Rust"
readme = "README.md"
licence = "GPL-3.0-only"
keywords = ["interpreter"]
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
log = "0.4.20"
simple_logger = "4.3.3"
